[gd_scene load_steps=2 format=3 uid="uid://caeej260o2mhg"]

[ext_resource type="Script" path="res://Script/Menus/pauseMenu.gd" id="1_4mb6s"]

[node name="pauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4mb6s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="paused_or_unpaused"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="pressed_on_options_button"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="pressed_on_exit_button"]
